# Haeksim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
backend/: admin_ui.py  haeksim.db  main.py  pyproject.toml  requirements.txt  schemas.py
backend/api/: auth.py  evaluation.py  passage.py
backend/auth/: security.py
backend/core/: config.py  db.py  security.py
backend/data/: passages.faiss
backend/models/: problem.py  user.py
backend/schemas/: evaluation.py  passage.py  user.py
backend/services/: evaluation_service.py  passage_service.py  user_service.py
backend/tests/: test_api.py
backend/utils/: llm_evaluator.py  parser - 복사본.py  parser.py
front/: package-lock.json  package.json
front/src/: App.js  index.css
front/src/pages/: ChatPage.css  ChatPage.jsx  DashboardPage.css  DashboardPage.jsx  HomePage.css  HomePage.jsx  LearningAnalysisPage.css  LearningAnalysisPage.jsx  LoadingPage.css  LoadingPage.jsx  Page1.css  Page1.jsx  PassageSettingsPage.css  PassageSettingsPage.jsx  ProblemRecommendationPage.jsx  QuizPage.css  QuizPage.jsx  (+6 more)
suneung-nonfiction/: 1.40  app.db  requirements.txt
suneung-nonfiction/app/: __init__.py  auth_core.py  db.py  db_sql.py  main.py  mapping_verify.py  models.py  openai_client.py  repo.py  schemas.py  schemas_auth.py
suneung-nonfiction/data/: answer_keys.csv  faiss.index  metadata.jsonl  summary_results.jsonl
suneung-nonfiction/ingest/: 01_extract_pdf.py  02_make_label_todo.py  03_merge_labels_and_answers.py  04_build_index.py  utils_text.py
suneung-nonfiction/scripts/: build_faiss_from_jsonl.py
(+7 files in other folders)
